chore: Working through aliases

--- a/docs/content/docs/bundle/manifest/file-format/1.0.0-alpha.1.md
+++ b/docs/content/docs/bundle/manifest/file-format/1.0.0-alpha.1.md
@@ -1,6 +1,8 @@
 ---
 title: Porter Manifest File Format 1.0.0-alpha.1
 description: The 1.0.0-alpha.1 file format for the Porter manifest, porter.yaml
+aliases:
+- /bundle/manifest/file-format/1.0.0-alpha.1/
 ---
 
 Bundle manifest file format version 1.0.0-alpha.1 is compatible with v1.0.0-alpha.1+ of Porter.
