--- a/docs/content/docs/bundle/manifest/file-format/1.0.1.md
+++ b/docs/content/docs/bundle/manifest/file-format/1.0.1.md
@@ -2,6 +2,8 @@
 title: Porter Manifest File Format 1.0.1
 description: The 1.0.1 file format for the Porter manifest, porter.yaml
 layout: single
+aliases:
+- /bundle/manifest/file-format/1.0.0
 ---
 
 Bundle manifest file format version 1.0.1 is compatible with v1.0.9+ of Porter.
