--- a/docs/content/docs/bundle/manifest/file-format/1.1.0.md
+++ b/docs/content/docs/bundle/manifest/file-format/1.1.0.md
@@ -2,6 +2,8 @@
 title: Porter Manifest File Format 1.1.0
 description: The 1.1.0 file format for the Porter manifest, porter.yaml
 layout: single
+aliases:
+- /bundle/manifest/file-format/1.0.0
 ---
 
 Bundle manifest file format version 1.1.0 is compatible with an unreleased version of Porter that supports the advanced dependencies feature (PEP003).
